# VGG-TensorRT

./: .gitignore  CMakeLists.txt  README.md  torch2tensorrt.py  train.py  vgg.cpp  vgg11.cpp
alexnet_pytorch/: __init__.py  model.py
include/: batch_norm.h  common.h  inference.h  logging.h  vgg_engine.h  vgg_network.h  weight.h
src/: CMakeLists.txt  batch_norm.cpp  common.cpp  engine.cpp  inference.cpp  logging.cpp  network.cpp  vgg_engine.cpp  weight.cpp
vgg_pytorch/: __init__.py  model.py
